--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <h1>Spoodydoo</h1>
       This website is no where near finished, so dont expect it to be good
       <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-      <a href="/smileyclicker.html"><button class="btn">Smiley Clicker</button></a>
+      <a href="/smileyclicker.html"><button class="btn">View Stats</button></a>
     </center>
   </body>
 </html>
