--- a/smileyclicker.html
+++ b/smileyclicker.html
@@ -1,11 +1,12 @@
 <html>
   <head>
-    <title>Smiley Clicker</title>
+    <title>Stats</title>
     <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
     <center>
-      <h1>Smiley Clicker</h1>
+      <h1>Stats</h1>
+      <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
       <p>Click the Smiley to get more Smileys and upgrade your Smiley by using the Smileys you earned.</p>
       <div class="game"><iframe src="https://ssmileygames.github.io/gamestorage/gamesconepointfour.html"></iframe></div>
       <a href="index"><button class="btn">Back</button></a>
